k8s/deploy/staging/istio-routing/storefront-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: storefront-public-routes
  namespace: yas-staging
spec:
  hosts:
    - storefront.staging.yas.local.com
  gateways:
    - yas-staging-public-gateway
  http:
    - route:
        - destination:
            host: storefront-bff
            port:
              number: 80
